maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:36: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  tmp = getDirection()
  ^PledgeMaze:37: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  setDirection(dir)
  ^PledgeMaze:38: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur) {
  ^